--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^17.1.0",
     "@gcba/obelisco-v2": "^1.5.1",
     "@ngneat/helipopper": "^8.0.3",
+    "angular-cli-ghpages": "^2.0.3",
     "ngx-highlight-js": "^16.1.0",
     "rxjs": "~7.8.0",
     "semantic-release": "^19.0.0",
