--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,40 +1,32 @@
-name: Build & Deploy to GitHub Pages
-
+name: Build and Deploy
 on:
   push:
-    branches: ["main"]
-
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
+    branches:
+      - main
 jobs:
-  # Build job
-  deploy:
+  build-and-deploy:
     runs-on: ubuntu-latest
-
     steps:
-      - uses: actions/checkout@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+      - name: Checkout 🛎️
+        uses: actions/checkout@v3
+      - uses: actions/setup-node@v1
         with:
-          node-version: 18
-
-      - name: Install dependencies
-        run: npm install
-
-      - name: Install Angular CLI
-        run: npm install -g @angular/cli
-
-      - name: Build
-        run: npm run build
-
-      - name: Configure Git
+          node-version: '18'
+      - name: Clear npm cache
+        run: npm cache clean -f
+      - uses: actions/cache@v2
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
+      - name: Install and Build 🔧
         run: |
-          git config --global user.name "github-actions[bot]"
-          git config --global user.email "github-actions[bot]@users.noreply.github.com"
-
-      - name: Deploy to Github pages
-        env:
+          npm ci
+          npm run deploy
+      - name: Deploy 🚀
+        uses: victorianastasi/github-pages-deploy-action@v4
+        with:
           GITHUB_TOKEN: ${{ secrets.GH_ANGULAR_TOKEN }}
-        run: ng deploy --base-href=/ngx-obelisco-v17/
+          branch: gh-pages
+          folder: ./dist/ngx-obelisco-v17
