--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,47 +1,47 @@
-name: CI
+# name: CI
  
-on:
-  push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
+# on:
+#   push:
+#     branches:
+#       - main
+#   pull_request:
+#     branches:
+#       - main
  
-jobs:
-  build:
-    runs-on: ubuntu-latest
+# jobs:
+#   build:
+#     runs-on: ubuntu-latest
  
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+#     steps:
+#       - name: Checkout code
+#         uses: actions/checkout@v3
  
-      - name: Set up Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: '18'
+#       - name: Set up Node.js
+#         uses: actions/setup-node@v2
+#         with:
+#           node-version: '18'
  
-      - name: Install dependencies
-        run: npm install
+#       - name: Install dependencies
+#         run: npm install
  
-  release:
-    needs: build
-    runs-on: ubuntu-latest
+#   release:
+#     needs: build
+#     runs-on: ubuntu-latest
  
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+#     steps:
+#       - name: Checkout code
+#         uses: actions/checkout@v3
  
-      - name: Set up Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: '18'
+#       - name: Set up Node.js
+#         uses: actions/setup-node@v2
+#         with:
+#           node-version: '18'
  
-      - name: Install dependencies
-        run: npm install
+#       - name: Install dependencies
+#         run: npm install
  
-      - name: Semantic Release
-        env:
-          GITHUB_TOKEN: ${{ secrets.GH_ANGULAR_TOKEN }}
-          NPM_TOKEN: ${{ secrets.TOKEN_NPM }}
-        run: npx semantic-release
+#       - name: Semantic Release
+#         env:
+#           GITHUB_TOKEN: ${{ secrets.GH_ANGULAR_TOKEN }}
+#           NPM_TOKEN: ${{ secrets.TOKEN_NPM }}
+#         run: npx semantic-release
