--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,7 @@ jobs:
           npm ci
           npm run deploy
       - name: Deploy 🚀
-        uses: victorianastasi/github-pages-deploy-action@v4
+        uses: victorianastasi/ngx-obelisco-v17
         with:
           GITHUB_TOKEN: ${{ secrets.GH_ANGULAR_TOKEN }}
           branch: gh-pages
