--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "ngx-obelisco-v17-demo",
-  "version": "0.0.0",
+  "version": "0.0.0-development",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "semantic-release": "semantic-release"
   },
   "private": true,
   "dependencies": {
@@ -22,7 +23,6 @@
     "@ngneat/helipopper": "^8.0.3",
     "ngx-highlight-js": "^16.1.0",
     "rxjs": "~7.8.0",
-    "semantic-release": "^19.0.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
@@ -30,6 +30,10 @@
     "@angular-devkit/build-angular": "^17.1.0",
     "@angular/cli": "^17.1.0",
     "@angular/compiler-cli": "^17.1.0",
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/commit-analyzer": "^13.0.0",
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/release-notes-generator": "^14.0.1",
     "@types/jasmine": "~5.1.0",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
@@ -38,6 +42,11 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "ng-packagr": "^17.3.0",
+    "semantic-release": "^24.2.0",
     "typescript": "~5.3.2"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/victorianastasi/ngx-obelisco-v17.git"
   }
 }
