--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,46 +1,35 @@
-name: CI
- 
+name: Release
+
 on:
   push:
     branches:
       - main
-  pull_request:
-    branches:
-      - main
- 
+
 jobs:
-  build:
-    runs-on: ubuntu-latest
- 
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
- 
-      - name: Set up Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: '18'
- 
-      - name: Install dependencies
-        run: npm install
- 
   release:
-    needs: build
     runs-on: ubuntu-latest
- 
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
- 
-      - name: Set up Node.js
-        uses: actions/setup-node@v2
+
+      - name: Setup Node.js for build
+        uses: actions/setup-node@v3
         with:
           node-version: '18'
- 
+          cache: 'npm'
+
       - name: Install dependencies
-        run: npm install
- 
-      - name: Semantic Release
+        run: npm ci
+
+      - name: Build project
+        run: npm run build
+
+      - name: Setup Node.js for Semantic Release
+        uses: actions/setup-node@v3
+        with:
+          node-version: '20'
+
+      - name: Run Semantic Release
         env:
           GITHUB_TOKEN: ${{ secrets.GH_ANGULAR_TOKEN }}
           NPM_TOKEN: ${{ secrets.TOKEN_NPM }}
