--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,30 +7,23 @@ on:
 
 jobs:
   release:
+    needs: build
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Setup Node.js for build
-        uses: actions/setup-node@v3
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
         with:
           node-version: '18'
-          cache: 'npm'
 
       - name: Install dependencies
-        run: npm ci
+        run: npm install
 
-      - name: Build project
-        run: npm run build
-
-      - name: Setup Node.js for Semantic Release
-        uses: actions/setup-node@v3
-        with:
-          node-version: '20'
-
-      - name: Run Semantic Release
+      - name: Semantic Release
         env:
-          GITHUB_TOKEN: ${{ secrets.GH_ANGULAR_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.TOKEN_NPM }}
         run: npx semantic-release
