--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,9 +5,11 @@ on:
     branches:
       - main
 
+permissions:
+  contents: write
+
 jobs:
   release:
-    needs: build
     runs-on: ubuntu-latest
 
     steps:
@@ -24,6 +26,6 @@ jobs:
 
       - name: Semantic Release
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GH_ANGULAR_TOKEN }}
           NPM_TOKEN: ${{ secrets.TOKEN_NPM }}
         run: npx semantic-release
