--- a/package.json
+++ b/package.json
@@ -48,5 +48,9 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/victorianastasi/ngx-obelisco-v17.git"
+  },
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org"
   }
 }
