--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "^17.1.0",
     "@gcba/obelisco-v2": "^1.5.1",
     "@ngneat/helipopper": "^8.0.3",
+    "@semantic-release/npm": "^12.0.1",
     "ngx-highlight-js": "^16.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
