--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ngx-obelisco-v17-demo",
-  "version": "0.0.0-development",
+  "version": "1.3.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
