fix: deploy yml

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Install and Build 🔧
         run: |
           npm ci
-          npm run deploy
+          npm run build --configuration production
       - name: Deploy 🚀
         uses: peaceiris/actions-gh-pages@v3
         with:
