fix: Configuraciones para publicar en NPM correctamente

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,14 +17,26 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Set up Node.js
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3
         with:
           node-version: '20.8.1'
+          cache: 'npm'
 
       - name: Install dependencies
-        run: npm install
+        run: npm ci
 
-      - name: Semantic Release
+      - name: Build Angular library
+        run: npm run build ngx-obelisco-v17
+
+      - name: Publish library to NPM
+        working-directory: ./dist/ngx-obelisco-v17
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.TOKEN_NPM }}
+        run: |
+          npm pack
+          npm publish
+
+      - name: Run Semantic Release
         env:
           GITHUB_TOKEN: ${{ secrets.GH_ANGULAR_TOKEN }}
           NPM_TOKEN: ${{ secrets.TOKEN_NPM }}
