fix: probando si compila

--- a/projects/ngx-obelisco-v17/tsconfig.lib.json
+++ b/projects/ngx-obelisco-v17/tsconfig.lib.json
@@ -2,13 +2,22 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
+    "rootDir": "projects/ngx-obelisco-v17",
     "outDir": "../../out-tsc/lib",
     "declaration": true,
     "declarationMap": true,
     "inlineSources": true,
-    "types": []
+    "types": [],
+    "paths": {
+      "ngx-obelisco": ["./index.ts"],
+      "ngx-obelisco/*": ["./*"]
+    }
   },
-  "exclude": [
-    "**/*.spec.ts"
-  ]
+  "angularCompilerOptions": {
+    "paths": {
+      "ngx-obelisco": ["./index.ts"],
+      "ngx-obelisco/*": ["./*"]
+    }
+  },
+  "exclude": ["node_modules", "test.ts", "./**/*.spec.ts", "./*.spec.ts"]
 }
