--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,8 @@
     "paths": {
       // "ngx-obelisco": ["./dist/ngx-obelisco"]
       "ngx-obelisco-v17": ["projects/ngx-obelisco-v17/"],
-      "ngx-obelisco-v17/*": ["projects/ngx-obelisco-v17/*"]
+      "ngx-obelisco-v17/*": ["projects/ngx-obelisco-v17/*"],
+      "ngx-obelisco-v17/core/models": ["projects/ngx-obelisco-v17/core/models"]
     },
     "esModuleInterop": true,
     "sourceMap": true,
