--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,15 @@
     "paths": {
       // "ngx-obelisco": ["./dist/ngx-obelisco"]
       "ngx-obelisco-v17": ["projects/ngx-obelisco-v17/index.ts"],
-      "ngx-obelisco-v17/*": ["projects/ngx-obelisco-v17/*"]
+      "ngx-obelisco-v17/*": ["projects/ngx-obelisco-v17/*"],
+      "include": [
+        "projects/ngx-obelisco-v17/core/*.ts",
+        "projects/ngx-obelisco-v17/access/*.ts"
+      ],
+      "exclude": [
+        "node_modules",
+        "dist" 
+      ]
     },
     "esModuleInterop": true,
     "sourceMap": true,
