fix: config ts 2

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,8 +16,9 @@
       "ngx-obelisco-v17": ["projects/ngx-obelisco-v17/index.ts"],
       "ngx-obelisco-v17/*": ["projects/ngx-obelisco-v17/*"],
       "include": [
-        "projects/ngx-obelisco-v17/core/*.ts",
-        "projects/ngx-obelisco-v17/access/*.ts"
+        // "projects/ngx-obelisco-v17/core/*.ts",
+        // "projects/ngx-obelisco-v17/access/*.ts",
+        "projects/ngx-obelisco-v17/*.ts" 
       ],
       "exclude": [
         "node_modules",
