--- a/projects/ngx-obelisco-v17/tsconfig.lib.json
+++ b/projects/ngx-obelisco-v17/tsconfig.lib.json
@@ -6,17 +6,9 @@
     "declaration": true,
     "declarationMap": true,
     "inlineSources": true,
-    "types": [],
-    "paths": {
-      "ngx-obelisco": ["./index.ts"],
-      "ngx-obelisco/*": ["./*"]
-    }
+    "types": []
   },
-  "angularCompilerOptions": {
-    "paths": {
-      "ngx-obelisco": ["./index.ts"],
-      "ngx-obelisco/*": ["./*"]
-    }
-  },
-  "exclude": ["node_modules", "test.ts", "./**/*.spec.ts", "./*.spec.ts"]
+  "exclude": [
+    "**/*.spec.ts"
+  ]
 }
