--- a/angular.json
+++ b/angular.json
@@ -24,10 +24,15 @@
             "index": "src/index.html",
             "baseHref": "/ngx-obelisco-v17/",
             "browser": "src/main.ts",
-            "polyfills": ["zone.js"],
+            "polyfills": [
+              "zone.js"
+            ],
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
-            "assets": ["src/favicon.ico", "src/assets"],
+            "assets": [
+              "src/favicon.ico",
+              "src/assets"
+            ],
             "styles": [
               "projects/ngx-obelisco-v17/scss/obelisco.scss",
               "src/styles.scss"
@@ -79,11 +84,19 @@
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
-            "polyfills": ["zone.js", "zone.js/testing"],
+            "polyfills": [
+              "zone.js",
+              "zone.js/testing"
+            ],
             "tsConfig": "tsconfig.spec.json",
             "inlineStyleLanguage": "scss",
-            "assets": ["src/favicon.ico", "src/assets"],
-            "styles": ["src/styles.scss"],
+            "assets": [
+              "src/favicon.ico",
+              "src/assets"
+            ],
+            "styles": [
+              "src/styles.scss"
+            ],
             "scripts": []
           }
         }
@@ -110,8 +123,7 @@
           },
           "configurations": {
             "production": {
-              "tsConfig": "projects/ngx-obelisco-v17/tsconfig.lib.prod.json",
-              "baseHref": "projects/ngx-obelisco-v17"
+              "tsConfig": "projects/ngx-obelisco-v17/tsconfig.lib.prod.json"
             },
             "development": {
               "tsConfig": "projects/ngx-obelisco-v17/tsconfig.lib.json"
@@ -123,7 +135,10 @@
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
             "tsConfig": "projects/ngx-obelisco-v17/tsconfig.spec.json",
-            "polyfills": ["zone.js", "zone.js/testing"]
+            "polyfills": [
+              "zone.js",
+              "zone.js/testing"
+            ]
           }
         },
         "deploy": {
