--- a/angular.json
+++ b/angular.json
@@ -123,14 +123,11 @@
               "outputPath": "dist/ngx-obelisco-v17",
               "index": "src/index.html",
               "main": "src/main.ts",
-              "polyfills": "src/polyfills.ts",
               "tsConfig": "tsconfig.app.json",
               "assets": [
-                "src/favicon.ico",
-                "src/assets"
               ],
               "styles": [
-                "src/styles.css"
+                "src/styles.scss"
               ],
               "scripts": []
             },
