--- a/angular.json
+++ b/angular.json
@@ -116,54 +116,27 @@
       "sourceRoot": "projects/ngx-obelisco-v17",
       "prefix": "o",
       "architect": {
-        
         "build": {
-            "builder": "@angular-devkit/build-angular:browser",
-            "options": {
-              "outputPath": "dist/ngx-obelisco-v17",
-              "index": "src/index.html",
-              "main": "src/main.ts",
-              "tsConfig": "tsconfig.app.json",
-              "assets": [
-              ],
-              "styles": [
-                "src/styles.scss"
-              ],
-              "scripts": []
+          "builder": "@angular-devkit/build-angular:ng-packagr",
+          "options": {
+            "project": "projects/ngx-obelisco-v17/ng-package.json"
+          },
+          "configurations": {
+            "production": {
+              "tsConfig": "projects/ngx-obelisco-v17/tsconfig.lib.prod.json"
             },
-            "configurations": {
-              "production": {
-                "fileReplacements": [
-                  {
-                    "replace": "src/environments/environment.ts",
-                    "with": "src/environments/environment.prod.ts"
-                  }
-                ],
-                "optimization": true,
-                "outputHashing": "all",
-                "sourceMap": false,
-                "extractCss": true,
-                "namedChunks": false,
-                "aot": true,
-                "extractLicenses": true,
-                "vendorChunk": false,
-                "buildOptimizer": true,
-                "baseHref": "/ngx-obelisco-v17/"
-              }
+            "development": {
+              "tsConfig": "projects/ngx-obelisco-v17/tsconfig.lib.json"
             }
           },
+          "defaultConfiguration": "production"
+        },
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
             "tsConfig": "projects/ngx-obelisco-v17/tsconfig.spec.json",
-            "polyfills": [
-              "zone.js",
-              "zone.js/testing"
-            ]
+            "polyfills": ["zone.js", "zone.js/testing"]
           }
-        },
-        "deploy": {
-          "builder": "angular-cli-ghpages:deploy"
         }
       }
     }
